Fix image floats on small screens

--- a/index.css
+++ b/index.css
@@ -263,4 +263,7 @@ hr {
     #intro .vertical-divider {
         width: 90% !important;
     }
+    dialog img {
+        float: none !important;
+    }
 }
